<resources>
    <string name="app_name">FitnessApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="update">UPDATE</string>
    <string name="name">Name</string>
    <string name="jone_doe">jone doe</string>
    <string name="password">Password:</string>
    <string name="add_new_post">ADD NEW POST</string>
    <string name="forum">Forum</string>
    <string name="post">POST</string>
    <string name="new_post">New post....</string>
    <string name="post2">Post</string>
    <string name="heading">Heading</string>
    <string name="user">User</string>
    <string name="choose_forum">Choose forum</string>
    <string name="forum_name">Forum name</string>
</resources>