<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewUsernameLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post2"
        android:textColor="#090909"
        android:textSize="18sp" />

</LinearLayout>